--- a/contact_graspnet_env.yml
+++ b/contact_graspnet_env.yml
@@ -63,8 +63,8 @@ dependencies:
   - llvm-tools=10.0.1=h4a3c616_5
   - llvmdev=10.0.1=h4a3c616_5
   - lz4-c=1.8.1.2=h14c3975_0
-  - matplotlib=3.3.2=0
-  - matplotlib-base=3.3.2=py37h817c723_0
+  - matplotlib
+  - matplotlib-base
   - mayavi=4.7.1=py37h94891b3_2
   - mkl=2020.2=256
   - mkl-service=2.3.0=py37he904b0f_0
@@ -149,3 +149,4 @@ dependencies:
     - wrapt==1.12.1
     - zipp==3.4.0
     - python-fcl==0.0.12
+    - tyro
